# website

./: Cargo.toml
assets/: main.css
src/: main.rs
templates/: index.html
