[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = "0.12.1"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
